# urp-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MIGRATION_GO.md  Makefile  PLAN.md  README.md  REFACTOR_PLAN.md  TODO.G.md  TODO.md  brain_cortex.py  brain_render.py  context.py  database.py  docker-compose.yml  docs_rag.py  dreamer.py  entrypoint.sh  git_loader.py  knowledge_store.py  llm_tools.py  master_commands.sh  querier.py  requirements.txt  runner.py  session_memory.py  session_summary.md  shell_hooks.sh  test_flow.sh  token_tracker.py
.claude/: MASTER.md
P1/: RETO.md
P2/: main.go
P3/: RETO.md
P4/: RETO.md
devcontainer/: claude-write  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  COMMANDS.md  QUICKSTART.md  progress.md  session-learnings-2024-12-02.md
go/: .goreleaser.yml  ARCHITECTURE.md  AUDIT_P5.md  Dockerfile  IMPROVEMENT_PLAN.md  Makefile  OPTIMIZATION_ANALYSIS.md  TODO.md  claude-alert-hook.sh  claude-container-settings.json  docker-compose.yml  entrypoint.sh  go.mod  go.sum  master-entrypoint.sh  shell_hooks.sh  worker-entrypoint.sh
legacy/: MIGRATION_GO.md  claude_token_hook.sh  docker-compose.yml  entrypoint.sh  shell_hooks.sh  urp-dev
pcx/: pcx_runner.py
proxy/: main.go
prueba-orquestador/: go.mod
rust_modules/inferencia/: Cargo.toml
rust_modules/inferencia/src/: lib.rs
tests/: AUDIT_REPORT.md  launcher_test_results.json  production_battery_results.json  project_scope_test_results.json  test_context_optimization.py  test_master_worker_claude.py  test_memory_system.py  test_production_battery.py  (+1 more)
(+2846 files in other folders)
